Actions
Bug #11064
closedmd_clear is misspelt
Start date:
2019-05-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
In #10953, we integrated support for mitigations for the microarchitectural data sampling vulnerabilities found by Intel. Part of this new support includes enumeration of the MD_CLEAR CPU feature. Unfortunately it seems we've misspelt the feature name as mb_clear
in a couple of places.
Related issues
Updated by Joshua M. Clulow about 3 years ago
- Related to Feature #10953: Need mitigations for MDS added
Updated by Robert Mustacchi over 1 year ago
To test this I ran a wsdiff against the system. Notably there were two entries that weren't due to the normal DOF/timestamp problem:
platform/i86xpv/kernel/amd64/unix NOTE: ELF .rodata difference detected. 16672,16673c16672,16673 < 0650440 m b _ c l e a r \0 c o r e _ t h < 635f626d 7261656c 726f6300 68745f65 --- > 0650440 m d _ c l e a r \0 c o r e _ t h > 635f646d 7261656c 726f6300 68745f65 platform/i86pc/kernel/amd64/unix NOTE: ELF .rodata difference detected. 16969,16970c16969,16970 < 0654040 m b _ c l e a r \0 c o r e _ t h < 635f626d 7261656c 726f6300 68745f65 --- > 0654040 m d _ c l e a r \0 c o r e _ t h > 635f646d 7261656c 726f6300 68745f65
In this case, this is exactly what we expected! wsdiff confirmed that the only change in unix was the spelling.
Updated by Electric Monk over 1 year ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 3d21c6bf2078598ab053d382b8a9af3b70b8e995
commit 3d21c6bf2078598ab053d382b8a9af3b70b8e995 Author: Robert Mustacchi <rm@fingolfin.org> Date: 2020-09-17T21:12:17.000Z 11064 md_clear is misspelt Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions