11064 md_clear is misspelt Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Approved by: Dan McDonald <danmcd@joyent.com>